// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LineDatum 1`] = `
.c0 {
  fill: none;
  stroke: rgb(0,0,0);
  stroke-width: 3;
}

<path
  class="line-path foo c0"
  d="M0"
/>
`;

exports[`LineDatum 2`] = `
.c0 {
  fill: rgb(0,0,0);
}

<g
  class="line-dot-group"
>
  <circle
    class="foo c0"
    color="rgb(0, 0, 0)"
    cx="0"
    cy="0"
    r="6"
  />
</g>
`;

exports[`LineDatum 3`] = `
<circle
  class="sc-bwzfXH foo jGWvBj"
  color="rgb(0, 0, 0)"
  cx="0"
  cy="0"
  r="6"
/>
`;
